--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document2</title>
 </head>
 <body>
-    <a href="style.css"> riferimento</a>
+    <a href="style1.css"> riferimento</a>
 </body>
 </html>
