dentro e fuori fabrizio corona

--- a/conta.htm
+++ b/conta.htm
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document1</title>
 </head>
+
 <body>
     
+    <h1>porcodio</h1>
+    <img src="image/WIN_20220913_11_12_11_Pro.jpg" alt="dioghane">
+    <button>dioporco</button>
 </body>
 </html>
