--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <a href="style1.css"> riferimento</a>
+    <h1>porcodio</h1>
+    <img src="image/WIN_20220913_11_12_11_Pro.jpg" alt="dioghane">
+    <button>dioporco</button>
 </body>
 </html>
