--- a/location.html
+++ b/location.html
@@ -6,6 +6,8 @@
     <title>Document3/title>
 </head>
 <body>
-    
+    <h1>porcodio</h1>
+    <img src="image/WIN_20220913_11_12_11_Pro.jpg" alt="dioghane">
+    <button>dioporco</button>
 </body>
 </html>
